Preview README.md

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-pandas as pd
+import pandas as pd
+import matplotlib.pyplot as plt
+import matplotlib as mpl
+import seaborn as sns
+import numpy as np
 import random
-import numpy 
 import sqlite3
+import sqlalchemy
