removed import statements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-import pandas as pd
-import matplotlib.pyplot as plt
-import matplotlib as mpl
-import seaborn as sns
-import numpy as np
-import random
-import sqlite3
-import sqlalchemy
+pandas as pd
+matplotlib.pyplot as plt
+matplotlib as mpl
+seaborn as sns
+numpy as np
+random
+sqlite3
+sqlalchemy
